# vec-of-enum

./: .gitattributes  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.ts  commitlint.config.mjs  fnox.toml  mise.toml  rust-toolchain.toml
.agents/: cli-for-type.md  cli.md  concepts.md  general.md  knowledge.concepts.md  minloss.draft.md  minloss.md  mise.md  principles.md
.agents/crates/: serde.md  subtype.md
.config/: nextest.toml
.github/workflows/: ci.yml
.mise/tasks/fnox/keychain/: set.sh
src/: lib.rs
