[package]
name = "vec-of-enum"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
description = "Helper macros for a Vec of enum values"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/vec-of-enum"
repository = "https://github.com/DenisGorbachev/vec-of-enum"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
title = "Vec of Enum"
tagline = ""
summary = ""
announcement = ""
readme = {}

[dependencies]

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }

[package.metadata.cargo-machete]
ignored = ["derive_more", "serde"]
